recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: value ccount is not a member of object Int
    Int ccount=count + 1;
        ^Nth:5: error: not found: value ccount
    if (tl == Nil) return ccount;
                          ^Nth:6: error: not found: value ccount
    if(ccount == tn){
       ^Nth:10: error: not found: value ccount
      return lambda(tl.tail, n, ccount);
                                ^